Fix overflow of code-boxes; break down long lines instead

--- a/resources/css/default.scss
+++ b/resources/css/default.scss
@@ -400,6 +400,7 @@ CONTENT
 }
 
 .code-box-content {
+  word-break: break-all;
   font-size: 1em;
   line-height: 1.15;
   padding: 0.5em 1em;
